plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.java-gi:gtk:0.13.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

tasks.named('run') {
    jvmArgs += "--enable-native-access=ALL-UNNAMED"
}

application {
    mainClass = "Example1"
}

